--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -97,8 +97,8 @@ main {
     }
 
     input {
-        border: 3px solid rgb(30, 30, 30);
-        border-radius: 15px;
+        border: none;
+        border-bottom: 3px solid rgb(30, 30, 30);
         width: 80%;
         padding: 7px 15px;
 
@@ -106,6 +106,19 @@ main {
             outline: none;
         }
 
+    }
+
+    select {
+        border: none;
+        border-bottom: 3px solid rgb(30, 30, 30);
+        background-color: white;
+        padding: 7px 15px;
+        text-transform: capitalize;
+        width: 30%;
+
+        &:focus {
+            outline: none;
+        }
     }
 
 }
